# desktop_capture

./: .gitignore  readme.md
doc/: block.pptx  image.pptx
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/main/core/win/callback/: renderercallback.h
src/main/core/win/capture/: CMakeLists.txt  app.cpp  app.h  capturecontroller.cpp  capturecontroller.h  capturehelper.h  d3dHelpers.h  direct3d11.interop.h  hwndcapture.cpp  hwndcapture.h  monitorlist.cpp  monitorlist.h
src/main/core/win/common/: pch.h
src/main/core/win/renderer/: CMakeLists.txt  common.fxh  deviceresources.cpp  deviceresources.h  dx11baserenderer.cpp  dx11baserenderer.h  dx11rgb32renderer.cpp  dx11rgb32renderer.h  dxhelper.h  gpuhelper.cpp  gpuhelper.h  mesh.cpp  mesh.h  nvscaler.cpp  nvscaler.h  nvsharpen.cpp  nvsharpen.h  pipeline.cpp  pipeline.h  videorgb32ps.hlsl  videorgb32vs.hlsl  win32messagehandler.cpp  win32messagehandler.h
src/main/nis/: CMakeLists.txt
src/main/setupwizard/: areaselecter.cpp  areaselecter.h  capturesetupwizard.cpp  capturesetupwizard.h
